--- a/platformio.ini
+++ b/platformio.ini
@@ -33,7 +33,7 @@ lib_deps =
 	ESP Async WebServer
 
 # Custom Script to run before building SPIFFS image
-extra_script = www_proc.py
+extra_scripts = www_proc.py
 # Set compress and embed options "gz|css|js|media"
 # embedding all media seems to affect captive portal helpers
 # they don't automatically open a browser when enabled
